--- a/template/scss.hbs
+++ b/template/scss.hbs
@@ -42,7 +42,7 @@
     @media (-webkit-min-device-pixel-ratio: {{ratio}}), (min-resolution: {{dpi}}dpi) {
     {{/if}}
     {{../../indicator}}{{cssesc ../classname}} {
-      background-image: url($spriteImageDir + '{{escimage url}}');
+      background-image: url($fear-core-ui-sprite-image-dir + '{{escimage url}}');
       {{#if dpi}}
       background-size: {{baseWidth}}px {{baseHeight}}px;
       {{/if}}
